# vdengine

./: .clang-format  .gitattributes  .gitignore  API-DESIGN.MD  API-DOC.md  API_SUGGESTION_MULTI_SCENE.md  API_SUGGESTION_SPLIT_SCREEN_VIEWPORTS.md  CLANG_FORMAT_SETUP.md  CMakeLists.txt  DEVELOPMENT_TIMELINE.md  README.md  SIDESCROLLER_API_SUGGESTIONS.md  imgui.ini  run-vlauncher.bat  run-vlauncher.ps1  test_audio.cpp
.github/: copilot-instructions.md
.github/prompts/: work-on-next-phase.prompt.md
.github/skills/add-component/: SKILL.md
.github/skills/architecture/: SKILL.md
.github/skills/build-tool-workflows/: SKILL.md
.github/skills/create-tests/: SKILL.md
.github/skills/imgui-integration/: SKILL.md
.github/skills/scripted-input/: SKILL.md
.github/skills/smoke-testing/: SKILL.md
.github/skills/using-api/: API_SUGGESTION_TEMPLATE.md  README.md  SKILL.md
.github/skills/vulkan-patterns/: SKILL.md
.github/skills/writing-code/: SKILL.md
.github/skills/writing-examples/: SKILL.md
.github/skills/writing-tools/: SKILL.md
docs/: API.md  API_REVIEW.md  ARCHITECTURE.md  CONTRIBUTING.md  DEBUG_MENU_STATUS.md  GAME_API_IMPLEMENTATION_PLAN.md  GETTING_STARTED.md  GIT_LFS_SETUP.md  IMGUI_INTEGRATION_COMPLETE.md  MULTI_SCENE_PHYSICS_DESIGN.md  MULTI_SCENE_PHYSICS_IMPLEMENTATION_PLAN.md  OPEN_SUGGESTIONS.md  README.md  SCRIPTED_INPUT_IMPLEMENTATION_PLAN.md  SCRIPTED_INPUT_REVIEW.md  VISUAL_REGRESSION_IMPLEMENTATION_PLAN.md  VISUAL_REGRESSION_TESTING_PLAN.md
docs/history/: API_SUGGESTION_MULTI_SCENE.md  API_SUGGESTION_SPLIT_SCREEN_VIEWPORTS.md  SIDESCROLLER_API_SUGGESTIONS.md
examples/: CMakeLists.txt  ExampleBase.h
examples/asteroids_demo/: main.cpp  main_new.cpp
examples/audio_demo/: README.md  main.cpp
examples/audio_demo/assets/: README.md
examples/breakout_demo/: main.cpp
examples/four_scene_3d_demo/: main.cpp
examples/geometry_repl/: CMakeLists.txt  README.md  main.cpp
examples/hex_prism_stacks_demo/: main.cpp
examples/imgui_demo/: CMakeLists.txt  README.md  main.cpp
examples/materials_lighting_demo/: main.cpp
examples/multi_scene_demo/: main.cpp
examples/parallel_physics_demo/: main.cpp
examples/physics_audio_demo/: main.cpp
examples/physics_demo/: main.cpp
examples/quad_viewport_demo/: main.cpp
examples/resource_demo/: main.cpp
examples/sidescroller/: README.md  main.cpp
examples/simple_game/: main.cpp
examples/sprite_demo/: main.cpp
examples/textured_cube_demo/: main.cpp
examples/triangle/: main.cpp
examples/wireframe_viewer/: main.cpp
examples/world_bounds_demo/: main.cpp
include/vde/: BufferUtils.h  Camera.h  Core.h  DescriptorManager.h  HexGeometry.h  HexPrismMesh.h  ImageLoader.h  QueueFamilyIndices.h  ShaderCache.h  ShaderCompiler.h  ShaderStage.h  SwapChainSupportDetails.h  Texture.h  Types.h  UniformBuffer.h  VulkanContext.h  Window.h
include/vde/api/: AudioClip.h  AudioEvent.h  AudioManager.h  AudioSource.h  CameraBounds.h  Entity.h  Game.h  GameAPI.h  GameCamera.h  GameSettings.h  GameTypes.h  InputHandler.h  InputScript.h  KeyCodes.h  LightBox.h  Material.h  Mesh.h  PhysicsEntity.h  PhysicsScene.h  PhysicsTypes.h  Resource.h  ResourceManager.h  Scene.h  SceneGroup.h  Scheduler.h  ThreadPool.h  ViewportRect.h  WorldBounds.h  WorldUnits.h
scripts/: README.md  build-and-test.ps1  build.ps1  clean-all.ps1  clean.ps1  format.ps1  help.ps1  rebuild.ps1  run-vlauncher.ps1  smoke-test.ps1  test.ps1  tmp_run_examples_check.ps1
scripts/input/: smoke_asteroids.vdescript  smoke_asteroids_physics.vdescript  smoke_audio.vdescript  smoke_breakout.vdescript  smoke_four_scene_3d.vdescript  smoke_geometry_repl.vdescript  smoke_materials.vdescript  smoke_multi_scene.vdescript  smoke_physics_demo.vdescript  smoke_quick.vdescript  smoke_sprite.vdescript  smoke_test.vdescript  smoke_vlauncher.vdescript
shaders/: mesh.frag  mesh.vert  simple_sprite.frag  simple_sprite.vert  sprite.frag  sprite.vert  triangle.frag  triangle.vert
smoketests/: README.md
smoketests/scripts/: smoke_imgui.vdescript  smoke_interactive.vdescript  smoke_resource.vdescript  smoke_textured_cube.vdescript
src/: BufferUtils.cpp  Camera.cpp  DescriptorManager.cpp  HexGeometry.cpp  HexPrismMesh.cpp  ImageLoader.cpp  ShaderCache.cpp  ShaderCompiler.cpp  ShaderHash.cpp  Texture.cpp  UniformBuffer.cpp  VulkanContext.cpp  Window.cpp  miniaudio_impl.cpp  stb_impl.cpp
src/api/: AudioClip.cpp  AudioManager.cpp  AudioSource.cpp  CameraBounds.cpp  Entity.cpp  Game.cpp  GameCamera.cpp  GameTypes.cpp  InputScript.cpp  LightBox.cpp  Material.cpp  Mesh.cpp  PhysicsEntity.cpp  PhysicsScene.cpp  ResourceManager.cpp  Scene.cpp  Scheduler.cpp  ThreadPool.cpp
tests/: AudioEvent_test.cpp  CMakeLists.txt  CameraBounds_test.cpp  Camera_test.cpp  Entity_test.cpp  GameCamera_test.cpp  HexGeometry_test.cpp  InputScript_test.cpp  Joystick_test.cpp  LightBox_test.cpp  Material_test.cpp  Mesh_test.cpp  PhysicsEntity_test.cpp  PhysicsScene_test.cpp  ResourceManager_test.cpp  SceneGroup_test.cpp  Scene_test.cpp  Scheduler_test.cpp  ShaderCache_test.cpp  SpriteEntity_test.cpp  Texture_test.cpp  ThreadPool_test.cpp  Types_test.cpp  ViewportRect_test.cpp  Window_test.cpp  WorldBounds_test.cpp  WorldUnits_test.cpp  main_test.cpp
tools/: CMakeLists.txt  ToolBase.h
tools/geometry_repl/: CMakeLists.txt  CommandRegistry.cpp  CommandRegistry.h  FileDialog.cpp  FileDialog.h  GeometryObject.h  GeometryReplScene.cpp  GeometryReplScene.h  ReplConsole.cpp  ReplConsole.h  main.cpp
tools/vlauncher/: CMakeLists.txt  ExecutableScanner.cpp  ExecutableScanner.h  GitUtils.cpp  GitUtils.h  ProcessLauncher.cpp  ProcessLauncher.h  VLauncherScene.cpp  VLauncherScene.h  main.cpp
